--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@arcgis/core": "^4.33.13",
     "@lucide/svelte": "^0.544.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/prettier": "^2.7.3",
     "bits-ui": "^2.9.8",
     "clsx": "^2.1.1",
+    "prettier": "^3.6.2",
     "svelte": "^5.38.1",
     "svelte-check": "^4.3.1",
     "tailwind-merge": "^3.3.1",
