--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "ai": "^5.0.44",
     "autoprefixer": "^10.4.21",
+    "mode-watcher": "^1.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.9"
